--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "refactor",
+  "name": "tic30.refactor",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "mdbreact": "4.9.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
@@ -16,6 +17,10 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "devDependencies": {
+    "renamer": "^1.0.0",
+    "rimraf": "^2.6.2"
   },
   "browserslist": [
     ">0.2%",
