--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gh-pages": "^2.2.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-card-flip": "^1.1.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^1.2.2",
