--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^1.2.2",
     "react-scripts": "3.0.1",
+    "react-scroll": "^1.8.3",
     "react-youtube": "^7.11.3"
   },
   "scripts": {
