--- a/package.json
+++ b/package.json
@@ -3,18 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.5.1",
+    "@mui/material": "^5.5.1",
     "gh-pages": "^2.2.0",
     "node-sass": "^4.14.1",
-    "react": "^16.13.1",
-    "react-card-flip": "^1.1.1",
-    "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0",
+    "react": "^16.14.0",
+    "react-card-flip": "^1.1.3",
+    "react-dom": "^16.14.0",
+    "react-router-dom": "^5.3.0",
     "react-router-hash-link": "^1.2.2",
     "react-scripts": "3.0.1",
-    "react-scroll": "^1.8.3",
-    "react-youtube": "^7.11.3"
+    "react-scroll": "^1.8.4",
+    "react-youtube": "^7.13.1"
   },
   "scripts": {
     "start": "react-scripts start",
