--- a/package.json
+++ b/package.json
@@ -8,20 +8,27 @@
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.1",
     "gh-pages": "^2.2.0",
-    "node-sass": "^4.14.1",
-    "react": "^16.14.0",
+    "node-sass": "^6.0.1",
+    "react": "^17.0.2",
     "react-card-flip": "^1.1.3",
-    "react-dom": "^16.14.0",
-    "react-router-dom": "^5.3.0",
-    "react-router-hash-link": "^1.2.2",
-    "react-scripts": "3.0.1",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.2",
+    "react-router-hash-link": "^2.4.3",
+    "react-scripts": "^4.0.3",
     "react-scroll": "^1.8.4",
     "react-youtube": "^7.13.1"
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-prettier": "3.4.0",
+    "eslint-plugin-jest": "^26.1.2",
+    "prettier": "2.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "lint:fix": "eslint ./src --fix",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
