--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,14 +19,7 @@
         "jest"
     ],
     "rules": {
-        "react/no-array-index-key": "off",
         "react/no-unescaped-entities": "off",
-        "react/prefer-stateless-function": "off",
-        "react/destructuring-assignment": "off",
-        "no-nested-ternary": "off",
-        "react/prop-types": "off",
-        // a11y stuff, fix later
-        "jsx-a11y/no-static-element-interactions": "off",
-        "jsx-a11y/click-events-have-key-events": "off"
+        "react/prop-types": "off"
     }
 }
