--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint:fix": "eslint ./src --fix",
+    "lint:fix": "eslint ./src --fix && prettier --write 'src/**/*.{js,jsx,ts,tsx,json,css,scss,md}'",
     "tsc": "tsc",
     "deploy": "gh-pages -d build"
   },
